--- a/index_arquivos/Pasta 1/Lista 01/LEGAL/index.html
+++ b/index_arquivos/Pasta 1/Lista 01/LEGAL/index.html
@@ -1,1 +1,152 @@
-﻿
+﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
+<head><title>NOVO SITE LINK 28-02-24</title>
+<link rel="sortcut icon" href="https://static.vecteezy.com/system/resources/previews/038/079/934/non_2x/ai-generated-3d-icon-face-with-tongue-emoji-isolated-on-transparent-background-free-png.png" type="image/gif" />
+<link href="CSS🔴.css" rel="stylesheet">
+<link rel="stylesheet" href="CSS🔴.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="santos.12164@hotmail.com">
+<meta name="description" content="NOVO SITE LINK 28-02-24">
+<meta name="keywords" content="NOVO SITE LINK 28-02-24">
+</head><body><style>
+img {
+    max-width: 100%;
+}
+<!----------------------------------------------------------->
+a:link{
+text-decoration:none;
+color:black;
+}
+a:visited{
+text-decoration:none;
+color:blue;
+}
+a:hover{
+text-decoration:none;
+color:#01DF01;
+}
+a:active{
+text-decoration:none;
+color:green;
+}
+</style>
+<!---------------------------------
+<body bgcolor="linen"></body>
+<body bgcolor="#d0e4fe"></body>
+<FONT COLOR="#ffffff">NOME⚫</FONT>
+&emsp;
+?autoplay=1&mute=1&enablejsapi=1
+<FONT SIZE=+4><b>NOME⚫</b></FONT>
+<b>&#9776; C A T E G O R I A S &#9776;</b>
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--####################################  INÍCIO  ################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Arial;}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+</style>
+</head>
+<body>
+
+<p>In this example, we use JavaScript to "click" on the London button, to open the tab on page load.</p>
+
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+</div>
+
+<div id="London" class="tabcontent">
+  <h3>London</h3>
+  <p>London is the capital city of England.</p>
+</div>
+
+<div id="Paris" class="tabcontent">
+  <h3>Paris</h3>
+  <p>Paris is the capital of France.</p> 
+</div>
+
+<div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
+
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
+   
+</body>
+</html> 
+
+
+
+
+
+
+
+
+
+
+
+
+
