--- a/index.html
+++ b/index.html
@@ -232,9 +232,7 @@ body {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 
-
-<center><button class="openbtn" onclick="openNav()"><B> 💥 &emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp; 💥 </B></button></center>
-
+<center><a href="index_arquivos/Pasta 5/1 - Copia.html"><FONT SIZE=+3><B>☰ &emsp; NOVO MENU &emsp; ☰</B></FONT></a></center>
 
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
