--- a/index_arquivos/NOVOMENU/index.html
+++ b/index_arquivos/NOVOMENU/index.html
@@ -11,7 +11,7 @@
 img {
     max-width: 100%;
 }
-</style><body bgcolor="#59ff00"></body>
+</style><body bgcolor="#000000"></body><FONT COLOR="#ffffff">
 <!---------------------------------
 <body bgcolor="#000000"></body>
 <FONT COLOR="#ffffff">&emsp;
@@ -62,7 +62,7 @@ body {margin:0;}
   margin-top: 30px;
   height: 500px; /* Used in this example to enable scrolling */
 }
-</style></head><body><div class="navbar"><input type="text" id="myInput" onkeyup="myFunction()" placeholder="PESQUISA NESSA PÁGINA" title="PESQUISA NESSA PÁGINA"></div><div class="main"><!DOCTYPE html><html><head>
+</style></head><body><div class="navbar"><input type="text" id="myInput" onkeyup="myFunction()" placeholder="🔍 PESQUISA NESSA PÁGINA" title="🔍 PESQUISA NESSA PÁGINA"></div><div class="main"><!DOCTYPE html><html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1"><style>
 * {
   box-sizing: border-box;
@@ -89,11 +89,11 @@ body {margin:0;}
   padding: 12px;
   text-decoration: none;
   font-size: 16px;
-  color: blue;
+  color: #fffb00;
   display: block
 }
 #myUL li a:hover:not(.header) {
-  background-color: #EEEEEE;
+  background-color: #1900ff;
 }
 </style></head><body><ul id="myUL"><BR/><BR/>
 <!---------------------------------------------------------------------------------->
